# slack-webhook-notifier

./: .pre-commit-config.yaml  pyproject.toml
.github/workflows/: ci.yml  labels.yml
